<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="340dp" 
    android:background="@android:color/black"
    android:orientation="vertical" >
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:minWidth="250dp" 
	    android:background="@android:color/black"
	    android:orientation="horizontal" >
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="32dp"
	        android:src="@drawable/ic_launcher_ripples"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:color/black"
	        android:paddingTop="5dp"
	        android:text="@string/app_name"
	        android:textSize="18dp" />
    </LinearLayout>     
    	    
	<View  
       android:layout_width="fill_parent"
       android:layout_height="1px"
       android:layout_marginTop="10dp"
       android:background="#FF333333"/>
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@android:color/black"
	    android:orientation="vertical"
	    android:paddingLeft="10dp"
	    android:paddingRight="20dp" > 

	  	<TextView
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:background="@android:color/black"
	       android:layout_marginTop="15dp"
	       android:text="@string/thanks_message"
	       android:textSize="12dp" />
	  	<View  
	       android:layout_width="match_parent"
	       android:layout_height="1dp"
	       android:layout_marginTop="10dp"
	       android:background="@drawable/gradient_color"/>
	  	<TextView
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:background="@android:color/black"
	       android:layout_marginTop="5dp"
	       android:text="@string/next_message"
	       android:textSize="12dp" />
	  	<View  
	       android:layout_width="match_parent"
	       android:layout_height="1dp"
	       android:layout_marginTop="10dp"
	       android:background="@drawable/gradient_color"/>
	  	<TextView
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:background="@android:color/black"
	       android:layout_marginTop="5dp"
	       android:text="@string/setting_message"
	       android:textSize="12dp" />
	  	<View  
	       android:layout_width="match_parent"
	       android:layout_height="1dp"
	       android:layout_marginTop="10dp"
	       android:background="@drawable/gradient_color"/>
	  	<TextView
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:background="@android:color/black"
	       android:layout_marginTop="5dp"
	       android:layout_marginBottom="15dp"
	       android:text="@string/copyright"
	       android:textSize="10dp"
	       android:gravity="center_horizontal" />
    </LinearLayout>    
    
  	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:minWidth="250dp"
	    android:background="@android:color/darker_gray"
	    android:orientation="horizontal" 
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:paddingLeft="1dp"
	    android:paddingRight="1dp">
		<Button 
		    android:id="@+id/buttonSetWallpaper"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_weight = "1"
	        android:text="@string/button1_text" 
	        android:textSize="18dp" /> 
		<Button 
		    android:id="@+id/buttonSetting"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_weight = "1"
	        android:text="@string/button2_text"
	        android:textSize="18dp" /> 
    </LinearLayout>  

</LinearLayout>